--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
-  <title>Happy Birthday!!! :)</title>
+  <title>Happy Birthday Chelsyy :)</title>
   <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +18,7 @@
 <body>
 
     <audio class="song" loop autoplay>
-        <source src="./music/anjay kata gue teh.mp3">
+        <source src="./music/monokrom.mp3">
         </source>
         Your browser isn't invited for super fun audio time.
     </audio>
@@ -143,7 +143,7 @@
 
         <div class="nine">
             <p>Okay, now come back and tell me if you liked it.</p>
-            <p id="replay">Or click, if you want to watch it again.</p>
+            <p id="replay">Or click, if you want to watch it again</p>
             <p class="last-smile">:)</p>
         </div>
     </div>
